--- a/MSLookUp/MSLookUp/MSLookUp/SearchPage.xaml
+++ b/MSLookUp/MSLookUp/MSLookUp/SearchPage.xaml
@@ -16,7 +16,7 @@
                 <Label Text="Number" Grid.Row="0" Grid.Column="0"/>
                 <Label Text="First Name" Grid.Row="1" Grid.Column="0"/>
                 <Label Text="Last Name" Grid.Row="2" Grid.Column="0"/>
-                <Entry Placeholder="Enter Student's Number " Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="snumber"/> 
+                <Entry Keyboard="Numeric" Placeholder="Enter Student's Number " Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="snumber"/> 
                 <Entry Placeholder="Enter Student's First Name " Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="fname"/> 
                 <Entry Placeholder="Enter Student's Last Name " Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" x:Name="lname"/> 
 
