--- a/MSLookUp/MSLookUp/MSLookUp/SearchPage.xaml
+++ b/MSLookUp/MSLookUp/MSLookUp/SearchPage.xaml
@@ -6,8 +6,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     x:Class="MSLookUp.SearchPage" 
     Padding="20">
-	<ContentPage.Content>
+	
+        <ContentPage.ToolbarItems>
+            <ToolbarItem Text="LogOut" Activated="Handle_Activated"/>
 
+        </ContentPage.ToolbarItems>
+    <ContentPage.Content>
         <StackLayout>
             <Image Source="/Users/yoginbhatt/Projects/MSLookUp/MSLookUp/Properties/Assets/logo.png"/>
         <Label Text="Mobile Student LookUp" TextColor="#E38947" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
@@ -16,13 +20,27 @@
                 <Label Text="Number" Grid.Row="0" Grid.Column="0"/>
                 <Label Text="First Name" Grid.Row="1" Grid.Column="0"/>
                 <Label Text="Last Name" Grid.Row="2" Grid.Column="0"/>
-                <Entry Placeholder="Enter Student's Number " Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="snumber"/> 
+                <Entry Placeholder="Enter Student's Number " Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="snumber" Keyboard="Numeric"/> 
                 <Entry Placeholder="Enter Student's First Name " Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="fname"/> 
                 <Entry Placeholder="Enter Student's Last Name " Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" x:Name="lname"/> 
 
             </Grid>
+            <Picker x:Name="picker" Title="Select a grade for student">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>1</x:String>
+                        <x:String>2</x:String>
+                        <x:String>3</x:String>
+                        <x:String>4 </x:String>
+                        <x:String>5</x:String>
+                        <x:String>6</x:String>
+                        <x:String>7</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
             <StackLayout>
             <Button Text="Search" Clicked="Handle_Clicked"/>
+                <Button Text="Clear" Clicked="Handle_Clicked_Clear"/>
             </StackLayout>
         </StackLayout>
 	</ContentPage.Content>
