--- a/MSLookUp/MSLookUp/MSLookUp/ProfilePage.xaml
+++ b/MSLookUp/MSLookUp/MSLookUp/ProfilePage.xaml
@@ -5,42 +5,46 @@
     Title="Student Info."
     Padding="20">
 	<ContentPage x:Name="profile" Title="Profile" Padding="20">
+        
         <ContentPage.ToolbarItems>
         <ToolbarItem Text="LogOut" Activated="Handle_Activated"/>
 
         </ContentPage.ToolbarItems>
-         <StackLayout>
-              <Image Source="logo.png"/>
-        <Label Text="Mobile Student LookUp" TextColor="#E38947" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
- 
-           <StackLayout>
-                <Grid RowSpacing="10" ColumnSpacing="5">
-                    <Image Grid.RowSpan="3" Grid.Column="0" Source="kid.png" />
-                    <Label Grid.Row="0" Grid.Column="1" Text="Last Name :" />
-                    <Label Grid.Row="1" Grid.Column="1" Text="First Name :"/>
-                    <Label VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="1" Text="Student Number# :"/>
-                    <Label Grid.Row="0" Grid.Column="2" Text="{Binding lastName}" />
-                    <Label Grid.Row="1" Grid.Column="2" Text="{Binding firstName}"/>
-                    <Label Grid.Row="2" Grid.Column="2" Text="{Binding studentNumber}"/>
-                    <Label Grid.Row="3" Grid.Column="0" Text="Pref Name :" />
-                    <Label Grid.Row="4" Grid.Column="0" Text="Gender :"/>
-                    <Label Grid.Row="5" Grid.Column="0" Text="Age :" />
-                    <Label Grid.Row="6" Grid.Column="0" Text="Medical :" />
-                    <Label Grid.Row="7" Grid.Column="0" Text="Phone :"/>
-                    <Label Grid.Row="8" Grid.Column="0" Text="Address :"/>
-                    <Label Grid.Row="9" Grid.Column="0" Text="E-Mail :"/>
-                    <Label Grid.Row="10" Grid.Column="0" Text="Locker :"/>
-                    <Label Grid.Row="11" Grid.Column="0" Text="Comb :"/>
+        <ScrollView>
+            <StackLayout>
+                <Image Source="logo.png"/>
+                <Label Text="Mobile Student LookUp" TextColor="#E38947" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+
+                <StackLayout>
+                    <Grid RowSpacing="10" ColumnSpacing="5">
+                        <Image Grid.RowSpan="3" Grid.Column="0"  x:Name="pic" />
+                        <Label Grid.Row="0" Grid.Column="1" Text="Last Name :" />
+                        <Label Grid.Row="1" Grid.Column="1" Text="First Name :"/>
+                        <Label VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="1" Text="Student Number# :"/>
+                        <Label Grid.Row="0" Grid.Column="2" Text="{Binding lastName}" />
+                        <Label Grid.Row="1" Grid.Column="2" Text="{Binding firstName}"/>
+                        <Label Grid.Row="2" Grid.Column="2" Text="{Binding studentNumber}"/>
+                        <Label Grid.Row="3" Grid.Column="0" Text="Pref Name :" />
+                        <Label Grid.Row="4" Grid.Column="0" Text="Gender :"/>
+                        <Label Grid.Row="5" Grid.Column="0" Text="Age :" />
+                        <Label Grid.Row="6" Grid.Column="0" Text="Medical :" />
+                        <Label Grid.Row="7" Grid.Column="0" Text="Phone :"/>
+                        <Label Grid.Row="8" Grid.Column="0" Text="Address :"/>
+                        <Label Grid.Row="9" Grid.Column="0" Text="E-Mail :"/>
+                        <Label Grid.Row="10" Grid.Column="0" Text="Locker :"/>
+                        <Label Grid.Row="11" Grid.Column="0" Text="Comb :"/>
+                        <Label Grid.Row="12" Grid.Column="0" x:Name="trs"/>
 
 
 
-                </Grid>
+                    </Grid>
+                </StackLayout>
+
+
+
             </StackLayout>
-                
-           
-             
-        </StackLayout>
-	</ContentPage >
+        </ScrollView>
+    </ContentPage >
     <ContentPage Title="Emergency Contact" Padding="20">
         <ContentPage.ToolbarItems>
             <ToolbarItem Text="LogOut" Activated="Handle_Activated"/>
@@ -78,13 +82,44 @@
             <ToolbarItem Text="LogOut" Activated="Handle_Activated"/>
 
         </ContentPage.ToolbarItems>
+        <ScrollView>
         <StackLayout>
                 <Image Source="/Users/yoginbhatt/Projects/MSLookUp/MSLookUp/Properties/Assets/logo.png"/>
         <Label Text="Mobile Student LookUp" TextColor="#E38947" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
     <Label Text="Student Schedule goes here"/>
+            <Grid>
+                <Label Text="period" Grid.Row="0" Grid.Column="0"/>
+                <Label Text="classcode" Grid.Row="0" Grid.Column="1"/>
+                <Label Text="StudentNo." Grid.Row="0" Grid.Column="2"/>
+                    <Label Text="absent" Grid.Row="0" Grid.Column="3"/>
+                    <Label Text="late" Grid.Row="0" Grid.Column="4"/>
+                    <Label Text="teacher." Grid.Row="0" Grid.Column="5"/>
 
+                </Grid>
+            <ListView x:Name = "timelist" >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+
+
+                            <Grid>
+
+                                <Label Text="{Binding period}" Grid.Row="1"  Grid.Column="0" />
+                                <Label Text="{Binding classcode}" Grid.Row="1" Grid.Column="1"/>
+                                <Label Text="{Binding roomno}"  Grid.Row="1" Grid.Column="2"/>
+                                <Label Text="{Binding absent}" Grid.Row="1" Grid.Column="3"/>
+                                <Label Text="{Binding late}"  Grid.Row="1" Grid.Column="4"/>
+                                <Label Text="{Binding teacher}"  Grid.Row="1" Grid.Column="5"/>
+                            </Grid>
+
+                        </ViewCell>
+                    </DataTemplate>
+
+                </ListView.ItemTemplate>
+
+            </ListView>
         </StackLayout>
-
+        </ScrollView>
     </ContentPage>
    
     
